--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         uses: softprops/action-gh-release@6cbd405e2c4e67a21c47fa9e383d020e4e28b836 # v2
         with:
           draft: true
-          files: outputs/*.apk
+          files: artifacts/*.apk
 
   play_build:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: play-aab
-          path: outputs/app-play-release.aab
+          path: artifacts/app-play-release.aab
           retention-days: 14
 
   play_upload:
@@ -57,9 +57,9 @@ jobs:
         uses: actions/download-artifact@fa0a91b85d7b32d4b4c6a91f9c93f874de7b38d1 # v4
         with:
           name: play-aab
-          path: outputs
+          path: artifacts
       - name: Upload to INTERNAL via Fastlane
-        run: fastlane android upload_internal version_name:${GITHUB_REF_NAME} aab_path:outputs/app-play-release.aab
+        run: fastlane android upload_internal version_name:${GITHUB_REF_NAME} aab_path:artifacts/app-play-release.aab
 
   play_promote:
     runs-on: ubuntu-latest
