Split github build and draft

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
 
-  build_github:
+  github_build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
@@ -23,6 +23,23 @@ jobs:
         run: ./scripts/ci_signing_setup.sh
       - name: Build GitHub APKs via Fastlane
         run: fastlane android build_github version_name:${GITHUB_REF_NAME}
+      - name: Upload APK artifacts
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+        with:
+          name: github-apks
+          path: outputs/*.apk
+          retention-days: 30
+
+  github_release_draft:
+    runs-on: ubuntu-latest
+    needs: github_build
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      - name: Download APK artifacts
+        uses: actions/download-artifact@fa0a91b85d7b32d4b4c6a91f9c93f874de7b38d1 # v4
+        with:
+          name: github-apks
+          path: artifacts
       - name: Draft GitHub Release
         uses: softprops/action-gh-release@6cbd405e2c4e67a21c47fa9e383d020e4e28b836 # v2
         with:
