--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: Download APK artifacts
-        uses: actions/download-artifact@fa0a91b85d7b32d4b4c6a91f9c93f874de7b38d1 # v4
+        uses: actions/download-artifact
         with:
           name: github-apks
           path: artifacts
@@ -71,7 +71,7 @@ jobs:
       - name: Setup Play Access
         run: ./scripts/ci_setup_play_access.sh
       - name: Download AAB artifact
-        uses: actions/download-artifact@fa0a91b85d7b32d4b4c6a91f9c93f874de7b38d1 # v4
+        uses: actions/download-artifact
         with:
           name: play-aab
           path: artifacts
