Specify the correct artifacts path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: github-apks
-          path: outputs/*.apk
+          path: artifacts/*.apk
           retention-days: 30
 
   github_release_draft:
