--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ env:
 
 jobs:
 
+  tests:
+    uses: ./.github/workflows/ci.yml
+
   github_build:
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +35,9 @@ jobs:
 
   github_release_draft:
     runs-on: ubuntu-latest
-    needs: github_build
+    needs:
+      - github_build
+      - tests
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: Download APK artifacts
@@ -64,7 +69,9 @@ jobs:
 
   play_upload:
     runs-on: ubuntu-latest
-    needs: play_build
+    needs:
+      - play_build
+      - tests
     environment: google-play
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
