Add labels to dependency update PR's

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,9 @@
     "config:recommended",
     "helpers:pinGitHubActionDigests"
   ],
+  "labels": [
+    "dependencies"
+  ],
   "packageRules": [
     {
       "matchDatasources": [
