--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
           path: artifacts/*.apk
           retention-days: 30
 
-  github_release_draft:
+  github_release:
     runs-on: ubuntu-latest
     needs:
       - github_build
@@ -89,7 +89,8 @@ jobs:
         with:
           name: github-apks
           path: artifacts
-      - name: Draft GitHub Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@6cbd405e2c4e67a21c47fa9e383d020e4e28b836 # v2
         with:
           files: artifacts/*.apk
+          generate_release_notes: true
