Add a separate category for bug-fixes in the changelog

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -3,12 +3,16 @@ changelog:
     authors:
       - weblate
   categories:
-    - title: 🚀 Features & Fixes
+    - title: 🚀 New
       labels:
         - "*"
       exclude:
         labels:
           - dependencies
+          - bug
+    - title: 🐞 Fixed
+      labels:
+        - bug
     - title: ⚙️ Dependencies
       labels:
         - dependencies
