Refine changelog categories to include separate sections for features, bug fixes, and other changes

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -5,14 +5,18 @@ changelog:
   categories:
     - title: 🚀 New
       labels:
+        - feature
+    - title: 🐞 Fixed
+      labels:
+        - bug
+    - title: 🧱 Other Changes
+      labels:
         - "*"
       exclude:
         labels:
           - dependencies
           - bug
-    - title: 🐞 Fixed
-      labels:
-        - bug
+          - feature
     - title: ⚙️ Dependencies
       labels:
         - dependencies
