Allow to trigger releases from a workflow

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ releases
 /.idea/deviceManager.xml
 /fastlane/README.md
 /fastlane/report.xml
+/.idea/copilot.data.migration.ask.xml
+/.idea/copilot.data.migration.ask2agent.xml
