--- a/core/analytics/firebase/src/main/AndroidManifest.xml
+++ b/core/analytics/firebase/src/main/AndroidManifest.xml
@@ -4,4 +4,10 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+  <application>
+    <meta-data
+      android:name="firebase_analytics_collection_enabled"
+      android:value="false" />
+  </application>
+
 </manifest>
