--- a/.github/actions/build_setup/action.yml
+++ b/.github/actions/build_setup/action.yml
@@ -3,7 +3,7 @@ runs:
   using: "composite"
   steps:
     - name: Set up JDK
-      uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5
+      uses: actions/setup-java@v5
       with:
         distribution: zulu
         java-version: 17
@@ -11,4 +11,4 @@ runs:
       shell: bash
       run: ./scripts/gradle_bootstrap.sh
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@4d9f0ba0025fe599b4ebab900eb7f3a1d93ef4c2 # v5
+      uses: gradle/actions/setup-gradle@v5
