--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      - uses: actions/checkout@v5
       - uses: ./.github/actions/build_setup
       - name: Run Unit Tests + Lint
         run: ./gradlew :app:lintPlayDebug
-      - uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5
+      - uses: actions/upload-artifact@v5
         if: always()
         with:
           name: lint-report
@@ -24,12 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      - uses: actions/checkout@v5
       - uses: ./.github/actions/build_setup
       - name: Run Unit Tests + Lint
         run: ./gradlew voiceUnitTest lintKotlin :app:assemblePlayDebug
       - name: Publish JUnit Report
-        uses: mikepenz/action-junit-report@e08919a3b1fb83a78393dfb775a9c37f17d8eea6 # v6
+        uses: mikepenz/action-junit-report@v6
         if: always()
         with:
           report_paths: '**/test-results/**/TEST-*.xml'
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      - uses: actions/checkout@v5
       - uses: ./.github/actions/build_setup
       - name: Enable KVM
         run: |
@@ -53,7 +53,7 @@ jobs:
       - name: Run Instrumentation Tests
         run: ./gradlew voiceDeviceGithubDebugAndroidTest -Pandroid.testoptions.manageddevices.emulator.gpu="swiftshader_indirect"
       - name: Publish JUnit Report
-        uses: mikepenz/action-junit-report@e08919a3b1fb83a78393dfb775a9c37f17d8eea6 # v6
+        uses: mikepenz/action-junit-report@v6
         if: always()
         with:
           report_paths: '**/test-results/**/TEST-*.xml'
