--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout (with tags)
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        uses: actions/checkout@v5
         with:
           # We need the tags to determine the next release
           fetch-depth: 0
