--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,6 @@ permissions:
 jobs:
   prepare_version:
     runs-on: ubuntu-latest
-
     outputs:
       version: ${{ steps.out.outputs.version }}
     steps:
@@ -36,14 +35,18 @@ jobs:
   tests:
     uses: ./.github/workflows/ci.yml
 
-  play:
+  release:
     runs-on: ubuntu-latest
     needs: [ prepare_version, tests ]
     environment: google-play
+    permissions:
+      contents: write
     env:
       PLAY_SERVICE_ACCOUNT: ${{ secrets.PLAY_SERVICE_ACCOUNT }}
       SIGNING_KEYSTORE_PLAY: ${{ secrets.SIGNING_KEYSTORE }}
       SIGNING_PROPERTIES_PLAY: ${{ secrets.SIGNING_PROPERTIES }}
+      SIGNING_KEYSTORE_GITHUB: ${{ secrets.SIGNING_KEYSTORE_GITHUB }}
+      SIGNING_PROPERTIES_GITHUB: ${{ secrets.SIGNING_PROPERTIES_GITHUB }}
       GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
     steps:
       - uses: actions/checkout@v6
@@ -66,23 +69,6 @@ jobs:
 
       - name: Promote INTERNAL -> PRODUCTION (0.1%)
         run: fastlane android promote version:${{ needs.prepare_version.outputs.version }}
-
-  github_release:
-    runs-on: ubuntu-latest
-    needs: [ prepare_version, tests ]
-    env:
-      SIGNING_KEYSTORE_GITHUB: ${{ secrets.SIGNING_KEYSTORE_GITHUB }}
-      SIGNING_PROPERTIES_GITHUB: ${{ secrets.SIGNING_PROPERTIES_GITHUB }}
-      GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
-    steps:
-      - uses: actions/checkout@v6
-        with:
-          ref: ${{ needs.prepare_version.outputs.version }}
-
-      - uses: ./.github/actions/build_setup
-
-      - name: Setup Signing
-        run: ./scripts/ci_signing_setup.sh
 
       - name: Build GitHub APKs
         run: fastlane android build_github version:${{ needs.prepare_version.outputs.version }}
